[package]
name = "pps-cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
tokio = { version = "1.5.0", features = ["process", "macros", "rt-multi-thread", "fs"] }
clap = "3.0.0-beta.2"
pps-engine = { path = "../engine" }
rand = "0.8.3"
tracing = "0.1.25"
tracing-futures = "0.2.5"
tokio-util = "0.6.6"
reqwest = { version = "0.11.3", features = ["json"] }
uuid = "0.8.2"
futures = "0.3.14"
tokio-stream = "0.1.5"
tracing-subscriber = "0.2.17"
