[package]
name = "pps-cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
tokio = { version = "1.18.5", features = ["process", "macros", "rt-multi-thread", "fs"] }
clap = "3.0.0-beta.2"
pps-engine = { path = "../engine" }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
