[package]
name = "pps-engine"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
tokio = { version = "1.8.4", features = ["macros", "rt", "process", "fs", "sync"] }
serde = "1.0.125"
serde_json = "1.0.64"
anyhow = "1.0.40"
toml = "0.5.8"
thiserror = "1.0.24"
async-trait = "0.1.50"
getrandom = { version = "0.2.2", features = ["std"] }
glob = "0.3.0"
pom = { path = "../pom" }
libc = "0.2.94"
roxmltree = "0.14.1"
serde_yaml = "0.8.17"
pest = "2.1.3"
pest_derive = "2.1.0"
formatf = { git = "https://github.com/mikailbag/formatf" }
hex = "0.4.3"
tracing = "0.1.25"
either = "1.6.1"
svaluer = { path = "../svaluer" }
