[package]
name = "svaluer"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
valuer-api = { path = "../valuer-api" }
anyhow = "1.0.40"
pom  = {path = "../pom"}
crossbeam-channel = "0.5.1"
serde_json = "1.0.64"
serde = "1.0.125"
serde_yaml = "0.8.17"
log = "0.4.14"
either = "1.6.1"
tracing-subscriber = "0.2.17"

[dev-dependencies]
simple_logger = "1.11.0"
